<resources>
    <string name="app_name">Apex Map Rotations</string>
    <string name="lottie_rawRes">timer_indicator_scaling</string>

    // ID's
    <string name="timer_id">timer</string>
    <string name="background">background</string>
    <string name="timer_animation_id">timer_animation</string>

    // Content Desc
    <string name="notify_imagebutton_desc">Set Notification</string>
    <string name="alarm_imagebutton_desc">Set Alarm</string>
    <string name="arrow_desc">Navigation Arrow</string>
    <string name="topTimerDesc">Ranked Arenas Timer</string>
    <string name="bgImageDesc">Background Image</string>
    <string name="appIconDesc">App Icon</string>
    <string name="errorImageDesc">Error Background Image</string>
    <string name="refreshMapDataButtonDesc">Refresh Map Data</string>

    <string name="swipeToNavigateDesc">Swipe To Navigate Graphic</string>
    <string name="swipeToRefreshDesc">Swipe Down To Refresh Graphic</string>
    <string name="setAlarmIntroDesc">Tap to schedule alarm or notification</string>
    <string name="finishIntroButtonDesc">Exit tutorial</string>

    // Strings
    <string name="currentMapText">Current: %s</string>
    <string name="nextMapText">Next: %s</string>
    <string name="time_format_arenas">%1s : %1s.%1d</string>
    <string name="time_format_br">0%1d : %1s : %1s.%1d</string>
    <string name="topTimerPlacesHolder">00 : 00</string>
    <string name="arenas">ARENAS</string>
    <string name="ranked_text_underlined"><u>RANKED</u></string>
    <string name="ranked_text">RANKED</string>
    <string name="alarmText">Set Alarm</string>
    <string name="notifyText">Notify</string>
    <string name="errorPlaceHolderText">An Error Occurred</string>

    <string name="unranked_label_underlined"><u>UNRANKED</u></string>
    <string name="unranked_label">UNRANKED</string>
    <string name="unranked_label_desc">UNRANKED LABEL</string>
    <string name="nextMapNameDesc">name of next map</string>
    <string name="currentMapNameDesc">current map name</string>

    <string name="sharedPreferencesKey">com.example.apexmaprotations.PREFERENCE_FILE_KEY</string>
    <string name="testSharedPreferencesKey">com.example.apexmaprotations.PREFERENCE_FILE_KEY_TEST_VERSION</string>
    <string name="alarmTimeKey">ALARM_TIME</string>
    <string name="notificationTimeKey">NOTIFICATION_TIME</string>
    <string name="nextMapKey">NEXT_MAP</string>

    <string name="navigationIntroText">Swipe to navigate!</string>
    <string name="refreshDataIntroText">Pull down to refresh!</string>
    <string name="setAlarmsIntroText">Tap to schedule alarms or notifications!</string>
    <string name="finishIntroButtonText">Got it!</string>
</resources>