<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.example.apexmaprotations.viewmodels.ApexViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--        <ImageView-->
        <!--            android:id="@+id/appIcon"-->
        <!--            android:layout_width="100.dp"-->
        <!--            android:layout_height="50.dp"-->
        <!--            android:layout_marginTop="32dp"-->
        <!--            android:contentDescription="@string/appIconDesc"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent"-->
        <!--            app:srcCompat="@drawable/ic_apex_maps_icon" />-->

        <TextView
            android:id="@+id/currentMapText"
            android:layout_width="0dp"
            android:layout_height="40.dp"
            android:layout_marginTop="32dp"
            android:background="@color/text_background"
            android:fontFamily="@font/inter_extralight"
            android:gravity="start|center_vertical"
            android:paddingStart="20.dp"
            android:paddingEnd="20.dp"
            android:singleLine="true"
            android:text="@string/currentMapText"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent=".8" />

        <TextView
            android:id="@+id/nextMapText"
            android:layout_width="0.dp"
            android:layout_height="40.dp"
            android:layout_marginTop="16dp"
            android:background="@color/text_background"
            android:fontFamily="@font/inter_extralight"
            android:gravity="start|center_vertical"
            android:paddingStart="20.dp"
            android:paddingEnd="20.dp"
            android:text="@string/nextUpText"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currentMapText"
            app:layout_constraintWidth_percent=".8" />

        <TextView
            android:id="@+id/time"
            android:layout_width="120.dp"
            android:layout_height="wrap_content"
            android:backgroundTintMode="add"
            android:elevation="24dp"
            android:fontFamily="@font/inter_extralight"


            android:shadowColor="@color/apex_red_night"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="8"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/timer_animation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/timer_animation"
            app:layout_constraintVertical_bias="0.48" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/timer_animation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:contentDescription="@string/timer_animation_id"
            android:elevation="24dp"
            android:scaleType="centerCrop"
            android:scaleX="2"
            android:scaleY="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nextMapText"
            app:lottie_autoPlay="true"
            app:lottie_clipToCompositionBounds="false"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/timer_indicator_glowing" />

        <ImageButton
            android:id="@+id/rightArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/arrow_desc"
            android:foregroundGravity="top"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:paddingStart="8.dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@id/timer_animation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/timer_animation"
            app:srcCompat="@drawable/ic_arrow_right"
            app:tint="@color/white"
            tools:ignore="ImageContrastCheck,RtlSymmetry" />

        <TextView
            android:id="@+id/setAlarmText"
            android:layout_width="0.dp"
            android:layout_height="40.dp"
            android:layout_marginTop="48dp"
            android:background="@color/text_background"
            android:fontFamily="@font/inter_extralight"
            android:gravity="start|center_vertical"
            android:paddingStart="20.dp"
            android:paddingEnd="20.dp"
            android:text="@string/alarmText"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timer_animation"
            app:layout_constraintWidth_percent="0.5"
            tools:layout_constraintTop_toBottomOf="@id/timer_animation" />

        <ImageButton
            android:id="@+id/setAlarmBtn"
            android:layout_width="30.dp"
            android:layout_height="30.dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/alarm_imagebutton_desc"
            android:foregroundGravity="center_vertical|center"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@id/setAlarmText"
            app:layout_constraintEnd_toEndOf="@id/setAlarmText"
            app:layout_constraintStart_toStartOf="@id/centerVertical"
            app:layout_constraintTop_toTopOf="@id/setAlarmText"
            app:srcCompat="@drawable/ic_alarm" />

        <TextView
            android:id="@+id/setNotificationText"
            android:layout_width="0.dp"
            android:layout_height="40.dp"
            android:layout_marginTop="16dp"
            android:background="@color/text_background"
            android:contentDescription="@string/notify_imagebutton_desc"
            android:fontFamily="@font/inter_extralight"
            android:gravity="start|center_vertical"
            android:paddingStart="20.dp"
            android:paddingEnd="20.dp"
            android:text="@string/notifyText"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/setAlarmText"
            app:layout_constraintWidth_percent=".5" />

        <ImageButton
            android:id="@+id/setNotificationButton"
            android:layout_width="30.dp"
            android:layout_height="30.dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/notify_imagebutton_desc"
            android:foregroundGravity="center_vertical|center|center_horizontal"
            android:foregroundTint="@color/white"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@id/setNotificationText"
            app:layout_constraintEnd_toEndOf="@id/setNotificationText"
            app:layout_constraintStart_toStartOf="@id/centerVertical"
            app:layout_constraintTop_toTopOf="@id/setNotificationText"
            app:srcCompat="@drawable/ic_notification"
            app:tint="@color/white" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/centerVertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/centerHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>